// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the job endpoint Check if you cannot duplicate job according to jobUniqueId 1`] = `
Object {
  "jobCreate": Object {
    "id": 1,
    "jobUniqueId": "job-unique-1",
    "name": "Bla a",
    "output": Object {},
    "status": "queued",
  },
}
`;

exports[`Test the job endpoint List the jobs 1`] = `
Object {
  "data": Object {
    "job": Array [
      Object {
        "id": 1,
        "name": "Bla a",
      },
      Object {
        "id": 2,
        "name": "Bla b",
      },
      Object {
        "id": 3,
        "name": "Bla b",
      },
      Object {
        "id": 4,
        "name": "job-unique-3",
      },
      Object {
        "id": 5,
        "name": "job-unique-4",
      },
    ],
  },
}
`;

exports[`Test the job endpoint One can create a job of a given type. 1`] = `
Object {
  "jobCreate": Object {
    "id": 6,
    "jobUniqueId": null,
    "name": "c",
    "output": null,
    "status": "queued",
  },
}
`;

exports[`Test the job endpoint Workers can easily create jobs. 1`] = `
Object {
  "__typename": "job",
  "batchId": null,
  "id": 6,
  "input": null,
  "isHighFrequency": false,
  "isUpdateAlreadyCalledWhileCancelRequested": false,
  "name": null,
  "output": null,
  "startAfter": null,
  "status": "queued",
  "type": "c",
}
`;

exports[`Test the job endpoint Workers can easily query jobs. 1`] = `
Array [
  Object {
    "__typename": "job",
    "id": 1,
    "input": Object {},
    "name": "Bla a",
    "output": Object {},
    "type": "a",
  },
  Object {
    "__typename": "job",
    "id": 2,
    "input": Object {},
    "name": "Bla b",
    "output": Object {},
    "type": "b",
  },
  Object {
    "__typename": "job",
    "id": 3,
    "input": Object {},
    "name": "Bla b",
    "output": Object {},
    "type": "b",
  },
  Object {
    "__typename": "job",
    "id": 4,
    "input": Object {},
    "name": "job-unique-3",
    "output": Object {},
    "type": "b",
  },
  Object {
    "__typename": "job",
    "id": 5,
    "input": Object {},
    "name": "job-unique-4",
    "output": Object {},
    "type": "b",
  },
]
`;

exports[`Test the job endpoint Workers can easily query jobs. 2`] = `
Array [
  Object {
    "__typename": "job",
    "id": 1,
    "input": Object {},
    "name": "Bla a",
    "output": Object {},
    "type": "a",
  },
]
`;
